--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "next": "15.1.2",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
